packages/analyzer/src/parser/SpecParser.ts
// Generated from E:\Semester 3\Programing Language Pragmatics\DSL - Requirement\018_023_Requirement Spesification and Testing project\spec-checker\grammar\Spec.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SpecListener } from "./SpecListener";
import { SpecVisitor } from "./SpecVisitor";


export class SpecParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly SYSTEM = 13;
	public static readonly FEATURE = 14;
	public static readonly INPUT = 15;
	public static readonly OUTPUT = 16;
	public static readonly PRECONDITION = 17;
	public static readonly POSTCONDITION = 18;
	public static readonly TEST_OBLIGATION = 19;
	public static readonly RULE = 20;
	public static readonly IF = 21;
	public static readonly THEN = 22;
	public static readonly DO = 23;
	public static readonly AND = 24;
	public static readonly OR = 25;
	public static readonly NOT = 26;
	public static readonly NUMBER = 27;
	public static readonly FLOAT = 28;
	public static readonly BooleanLiteral = 29;
	public static readonly STRING = 30;
	public static readonly ID = 31;
	public static readonly LPAREN = 32;
	public static readonly RPAREN = 33;
	public static readonly LBRACE = 34;
	public static readonly RBRACE = 35;
	public static readonly LBRACK = 36;
	public static readonly RBRACK = 37;
	public static readonly COMMA = 38;
	public static readonly COLON = 39;
	public static readonly SEMI = 40;
	public static readonly DOT = 41;
	public static readonly QMARK = 42;
	public static readonly EQ = 43;
	public static readonly WS = 44;
	public static readonly LINE_COMMENT = 45;
	public static readonly BLOCK_COMMENT = 46;
	public static readonly ERROR_CHAR = 47;
	public static readonly RULE_specification = 0;
	public static readonly RULE_systemDecl = 1;
	public static readonly RULE_featureDecl = 2;
	public static readonly RULE_inputDecl = 3;
	public static readonly RULE_outputDecl = 4;
	public static readonly RULE_valueDecl = 5;
	public static readonly RULE_freeExprDecl = 6;
	public static readonly RULE_preconditionDecl = 7;
	public static readonly RULE_postconditionDecl = 8;
	public static readonly RULE_testObligationDecl = 9;
	public static readonly RULE_ruleDecl = 10;
	public static readonly RULE_ifThenEffect = 11;
	public static readonly RULE_effectList = 12;
	public static readonly RULE_effect = 13;
	public static readonly RULE_assignmentEffect = 14;
	public static readonly RULE_actionEffect = 15;
	public static readonly RULE_functionCall = 16;
	public static readonly RULE_expr = 17;
	public static readonly RULE_orExpr = 18;
	public static readonly RULE_andExpr = 19;
	public static readonly RULE_notExpr = 20;
	public static readonly RULE_relationalExpr = 21;
	public static readonly RULE_additiveExpr = 22;
	public static readonly RULE_multiplicativeExpr = 23;
	public static readonly RULE_unaryExpr = 24;
	public static readonly RULE_primaryExpr = 25;
	public static readonly RULE_idList = 26;
	public static readonly RULE_argList = 27;
	public static readonly RULE_path = 28;
	public static readonly RULE_annotation = 29;
	public static readonly RULE_annotationArgs = 30;
	public static readonly RULE_annotationArg = 31;
	public static readonly RULE_literal = 32;
	public static readonly RULE_arrayLiteral = 33;
	public static readonly RULE_objectLiteral = 34;
	public static readonly RULE_objectPair = 35;
	public static readonly RULE_compOp = 36;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"specification", "systemDecl", "featureDecl", "inputDecl", "outputDecl", 
		"valueDecl", "freeExprDecl", "preconditionDecl", "postconditionDecl", 
		"testObligationDecl", "ruleDecl", "ifThenEffect", "effectList", "effect", 
		"assignmentEffect", "actionEffect", "functionCall", "expr", "orExpr", 
		"andExpr", "notExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
		"unaryExpr", "primaryExpr", "idList", "argList", "path", "annotation", 
		"annotationArgs", "annotationArg", "literal", "arrayLiteral", "objectLiteral", 
		"objectPair", "compOp",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'+'", "'-'", "'*'", "'/'", "'?.'", "'@'", "'=='", "'!='", 
		"'>='", "'<='", "'>'", "'<'", "'system'", "'feature'", "'input'", "'output'", 
		"'precondition'", "'postcondition'", "'test_obligation'", "'rule'", "'if'", 
		"'then'", "'do'", "'and'", "'or'", "'not'", undefined, undefined, undefined, 
		undefined, undefined, "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
		"':'", "';'", "'.'", "'?'", "'='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "SYSTEM", 
		"FEATURE", "INPUT", "OUTPUT", "PRECONDITION", "POSTCONDITION", "TEST_OBLIGATION", 
		"RULE", "IF", "THEN", "DO", "AND", "OR", "NOT", "NUMBER", "FLOAT", "BooleanLiteral", 
		"STRING", "ID", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
		"COMMA", "COLON", "SEMI", "DOT", "QMARK", "EQ", "WS", "LINE_COMMENT", 
		"BLOCK_COMMENT", "ERROR_CHAR",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SpecParser._LITERAL_NAMES, SpecParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SpecParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Spec.g4"; }

	// @Override
	public get ruleNames(): string[] { return SpecParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SpecParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}


	    /**
	     * Meng-override fungsi notifikasi error bawaan ANTLR.
	     * Tujuannya: Memberikan pesan error yang lebih presisi dengan baris dan kolom.
	     */
	    public override notifyErrorListeners(msg: any, offendingToken: any, e: any): void {
	        // [PERBAIKAN DARI VERSI 1]
	        // Kita menggunakan 'charPositionInLine', bukan 'column'.
	        // Properti 'column' tidak ada di standar Token TypeScript ANTLR,
	        // jadi perbaikan ini mencegah error saat kompilasi (TS2339).
	        const location = offendingToken && offendingToken.line !== undefined
	            ? ` at line ${offendingToken.line}, column ${offendingToken.charPositionInLine}`
	            : "";
	        
	        super.notifyErrorListeners("Syntax Error" + location + ": " + msg, offendingToken, e);
	    }

	    /**
	     * Strategi pemulihan (Recovery) saat terjadi syntax error.
	     * Jika parser bingung, ia akan mencoba melewati token sampah sampai
	     * menemukan karakter 'aman' (seperti kurung kurawal atau titik koma)
	     * agar tidak langsung crash total.
	     */
	    public override recover(recognizer: any, e: any): void {
	        const follow = new Set([
	            SpecParser.RBRACE, // }
	            SpecParser.LBRACE, // {
	            SpecParser.SEMI,   // ;
	            SpecParser.COMMA,  // ,
	        ]);

	        let tok = recognizer.getInputStream().LT(1);
	        while (tok && !follow.has(tok.type) && tok.type !== -1) { // -1 adalah EOF
	            recognizer.consume(); // Makan token sampah
	            tok = recognizer.getInputStream().LT(1);
	        }
	    }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SpecParser._ATN, this);
	}
	// @RuleVersion(0)
	public specification(): SpecificationContext {
		let _localctx: SpecificationContext = new SpecificationContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SpecParser.RULE_specification);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 75;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 74;
				this.systemDecl();
				}
				}
				this.state = 77;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === SpecParser.SYSTEM);
			this.state = 79;
			this.match(SpecParser.EOF);
			}
			this._ctx._stop = this._input.tryLT(-1);

			        // Slot kosong untuk menyisipkan kode semantic analysis nantinya (Versi 2)
			    
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public systemDecl(): SystemDeclContext {
		let _localctx: SystemDeclContext = new SystemDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SpecParser.RULE_systemDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this.match(SpecParser.SYSTEM);
			this.state = 82;
			_localctx._name = this.match(SpecParser.ID);
			this.state = 83;
			this.match(SpecParser.LBRACE);
			this.state = 85;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 84;
				_localctx._featureDecl = this.featureDecl();
				_localctx._features.push(_localctx._featureDecl);
				}
				}
				this.state = 87;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === SpecParser.FEATURE);
			this.state = 89;
			this.match(SpecParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public featureDecl(): FeatureDeclContext {
		let _localctx: FeatureDeclContext = new FeatureDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SpecParser.RULE_featureDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 91;
			this.match(SpecParser.FEATURE);
			this.state = 92;
			_localctx._name = this.match(SpecParser.ID);
			this.state = 93;
			this.match(SpecParser.LBRACE);
			this.state = 104;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SpecParser.T__0) | (1 << SpecParser.T__1) | (1 << SpecParser.INPUT) | (1 << SpecParser.OUTPUT) | (1 << SpecParser.PRECONDITION) | (1 << SpecParser.POSTCONDITION) | (1 << SpecParser.TEST_OBLIGATION) | (1 << SpecParser.RULE) | (1 << SpecParser.NOT) | (1 << SpecParser.NUMBER) | (1 << SpecParser.FLOAT) | (1 << SpecParser.BooleanLiteral) | (1 << SpecParser.STRING) | (1 << SpecParser.ID))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (SpecParser.LPAREN - 32)) | (1 << (SpecParser.LBRACE - 32)) | (1 << (SpecParser.LBRACK - 32)))) !== 0)) {
				{
				this.state = 102;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 94;
					this.inputDecl();
					}
					break;

				case 2:
					{
					this.state = 95;
					this.outputDecl();
					}
					break;

				case 3:
					{
					this.state = 96;
					this.valueDecl();
					}
					break;

				case 4:
					{
					this.state = 97;
					this.freeExprDecl();
					}
					break;

				case 5:
					{
					this.state = 98;
					this.preconditionDecl();
					}
					break;

				case 6:
					{
					this.state = 99;
					this.postconditionDecl();
					}
					break;

				case 7:
					{
					this.state = 100;
					this.ruleDecl();
					}
					break;

				case 8:
					{
					this.state = 101;
					this.testObligationDecl();
					}
					break;
				}
				}
				this.state = 106;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 107;
			this.match(SpecParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inputDecl(): InputDeclContext {
		let _localctx: InputDeclContext = new InputDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SpecParser.RULE_inputDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.match(SpecParser.INPUT);
			this.state = 110;
			this.match(SpecParser.COLON);
			this.state = 111;
			_localctx._ids = this.idList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public outputDecl(): OutputDeclContext {
		let _localctx: OutputDeclContext = new OutputDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SpecParser.RULE_outputDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(SpecParser.OUTPUT);
			this.state = 114;
			this.match(SpecParser.COLON);
			this.state = 115;
			_localctx._ids = this.idList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public valueDecl(): ValueDeclContext {
		let _localctx: ValueDeclContext = new ValueDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SpecParser.RULE_valueDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(SpecParser.ID);
			this.state = 118;
			this.match(SpecParser.COLON);
			this.state = 119;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public freeExprDecl(): FreeExprDeclContext {
		let _localctx: FreeExprDeclContext = new FreeExprDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SpecParser.RULE_freeExprDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public preconditionDecl(): PreconditionDeclContext {
		let _localctx: PreconditionDeclContext = new PreconditionDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SpecParser.RULE_preconditionDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(SpecParser.PRECONDITION);
			this.state = 124;
			this.match(SpecParser.COLON);
			this.state = 125;
			_localctx._condition = this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public postconditionDecl(): PostconditionDeclContext {
		let _localctx: PostconditionDeclContext = new PostconditionDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, SpecParser.RULE_postconditionDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.match(SpecParser.POSTCONDITION);
			this.state = 128;
			this.match(SpecParser.COLON);
			this.state = 129;
			_localctx._condition = this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public testObligationDecl(): TestObligationDeclContext {
		let _localctx: TestObligationDeclContext = new TestObligationDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SpecParser.RULE_testObligationDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 131;
			this.match(SpecParser.TEST_OBLIGATION);
			this.state = 132;
			this.match(SpecParser.COLON);
			this.state = 135;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				{
				this.state = 133;
				this.match(SpecParser.STRING);
				}
				break;

			case 2:
				{
				this.state = 134;
				this.expr();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ruleDecl(): RuleDeclContext {
		let _localctx: RuleDeclContext = new RuleDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, SpecParser.RULE_ruleDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(SpecParser.RULE);
			this.state = 138;
			_localctx._name = this.match(SpecParser.ID);
			this.state = 139;
			this.match(SpecParser.COLON);
			this.state = 140;
			this.ifThenEffect();
			this.state = 144;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SpecParser.T__5) {
				{
				{
				this.state = 141;
				_localctx._annotations = this.annotation();
				}
				}
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifThenEffect(): IfThenEffectContext {
		let _localctx: IfThenEffectContext = new IfThenEffectContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, SpecParser.RULE_ifThenEffect);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			this.match(SpecParser.IF);
			this.state = 148;
			_localctx._condition = this.expr();
			this.state = 149;
			this.match(SpecParser.THEN);
			this.state = 150;
			_localctx._effects = this.effectList();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public effectList(): EffectListContext {
		let _localctx: EffectListContext = new EffectListContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, SpecParser.RULE_effectList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 152;
			this.effect();
			this.state = 157;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SpecParser.COMMA || _la === SpecParser.SEMI) {
				{
				{
				this.state = 153;
				_la = this._input.LA(1);
				if (!(_la === SpecParser.COMMA || _la === SpecParser.SEMI)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 154;
				this.effect();
				}
				}
				this.state = 159;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public effect(): EffectContext {
		let _localctx: EffectContext = new EffectContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, SpecParser.RULE_effect);
		try {
			this.state = 162;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 160;
				this.assignmentEffect();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 161;
				this.actionEffect();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignmentEffect(): AssignmentEffectContext {
		let _localctx: AssignmentEffectContext = new AssignmentEffectContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, SpecParser.RULE_assignmentEffect);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			_localctx._left = this.path();
			this.state = 165;
			this.match(SpecParser.EQ);
			this.state = 166;
			_localctx._right = this.expr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actionEffect(): ActionEffectContext {
		let _localctx: ActionEffectContext = new ActionEffectContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, SpecParser.RULE_actionEffect);
		try {
			this.state = 171;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SpecParser.ID:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 168;
				this.functionCall();
				}
				break;
			case SpecParser.DO:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 169;
				this.match(SpecParser.DO);
				this.state = 170;
				_localctx._actionName = this.match(SpecParser.ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		let _localctx: FunctionCallContext = new FunctionCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, SpecParser.RULE_functionCall);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 173;
			this.match(SpecParser.ID);
			this.state = 174;
			this.match(SpecParser.LPAREN);
			this.state = 176;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SpecParser.T__0) | (1 << SpecParser.T__1) | (1 << SpecParser.NOT) | (1 << SpecParser.NUMBER) | (1 << SpecParser.FLOAT) | (1 << SpecParser.BooleanLiteral) | (1 << SpecParser.STRING) | (1 << SpecParser.ID))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (SpecParser.LPAREN - 32)) | (1 << (SpecParser.LBRACE - 32)) | (1 << (SpecParser.LBRACK - 32)))) !== 0)) {
				{
				this.state = 175;
				this.argList();
				}
			}
